--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "homepage": "https://theoaksschool.xyz.techinfolab360.xyz/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -45,6 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "css-loader": "^7.1.2",
+    "dotenv": "^16.4.5",
     "postcss": "^8.4.41",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.10"
